--- a/src/index.scss
+++ b/src/index.scss
@@ -1,8 +1,17 @@
+@font-face {
+  font-family: 'Proxima Nova';
+  src: url(./assets/fonts/ProximaNova-Regular.woff2);
+}
+
 body {
   margin: 0;
-  font-family: -apple-system, BlinkMacSystemFont, 'Segoe UI', 'Roboto', 'Oxygen',
-    'Ubuntu', 'Cantarell', 'Fira Sans', 'Droid Sans', 'Helvetica Neue',
-    sans-serif;
+  font-family: 'Proxima Nova';
   -webkit-font-smoothing: antialiased;
   -moz-osx-font-smoothing: grayscale;
+  background-color: #EBEBEB;
+}
+
+a {
+  text-decoration: none;
+  color: initial;
 }
