--- a/src/components/PDP/styles.scss
+++ b/src/components/PDP/styles.scss
@@ -48,7 +48,7 @@
                 }
 
                 .product-image {
-                    max-width: 100%;
+                    width: 100%;
                     height: auto;
                     object-fit: contain;
                 }
